Fix encoding table spacing styling

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -415,7 +415,7 @@ h1 img {
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-bottom: 0.5em;
+    margin: 0.5em 0;
     border-radius: 4px;
 }
 
